arreglo de filtro de busqueda en gestion de usuarios

--- a/materiales/templates/components/navbar.html
+++ b/materiales/templates/components/navbar.html
@@ -24,7 +24,7 @@
                             {% if user.is_superuser or user.is_staff %}
                                 Bibliotecaria
                             {% else %}
-                                Alumno
+                                Estudiante
                             {% endif %}
                         </div>
                     </div>
