--- a/materiales/templates/components/baseb.html
+++ b/materiales/templates/components/baseb.html
@@ -10,6 +10,9 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Font Awesome para iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <!-- Estilos base del sitio -->
     <link rel="stylesheet" href="{% static 'css/baseb.css' %}">
@@ -20,6 +23,7 @@
     <title>{% block title %}Biblioteca{% endblock %}</title>
 
     <!-- Estilos extra que se pueden agregar desde otras plantillas -->
+    {% block extra_css %}{% endblock %}
     {% block extra_styles %}{% endblock %}
 </head>
 <body>
@@ -47,6 +51,7 @@
     </div>    
 
     <!-- Scripts base (siempre incluidos) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Scripts adicionales (si se necesitan) -->
