Integración de filtros dinámicos y diseños

--- a/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_carga_exitosa.html
+++ b/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_carga_exitosa.html
@@ -159,7 +159,7 @@
                 </a>
                 
                 <a href="{% url 'modificacion_materiales' %}" class="success-btn" id="revisarDatosBtn">
-                    VOLVER A REVISAR DATOS CARGADOS / GENERAR ETIQUETAS
+                    REVISAR DATOS
                 </a>
                 
                 <a href="{% url 'home' %}" class="success-btn" id="volverInicioBtn">
