formulario de cambiar contraseña y arreglo de modal

--- a/materiales/templates/login/cambiar_password.html
+++ b/materiales/templates/login/cambiar_password.html
@@ -267,7 +267,7 @@
 
 {% block content %}
     <header class="header-pantalla">
-        <h1 class="header-title-centered">CAMBIAR CONTRASEÑA</h1>
+        <h1 class="header-title-centered">MI PERFIL</h1>
         <a href="{% url 'home' %}" class="logo-link">
             <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
         </a>
