--- a/materiales/templates/login/modal_login/confirmacion_cambio_contraseña_exitosa.html
+++ b/materiales/templates/login/modal_login/confirmacion_cambio_contraseña_exitosa.html
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-footer border-0 justify-content-center">
                 <button type="button" class="btn btn-primary btn-lg px-4" onclick="redirectToProfile()">
-                    <i class="fas fa-user me-2"></i>Ir a Mi Perfil
+                    Ir a Mi Perfil
                 </button>
             </div>
         </div>
